# Minecraft-online-checker

./: .env.example  .gitignore  README.md  ds.py  main.py  pyproject.toml  requirements.txt  server.py  settings.py  tg.py
app/: __main__.py  config.py  exceptions.py  json_worker.py
app/core/: server.py
app/core/senders/: base.py  console.py
jsonw/: creator.py  reader.py  servers.json
